feat: add Google Analytics tracking script to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>随机点名器</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TEH2Q6X1W"></script><script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7TEH2Q6X1W');
+    </script>
   </head>
   <body>
     <div id="app"></div>
